--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 
 :root {
 
@@ -10,6 +10,7 @@
 --unnamed-color-222222: #222222;
 --unnamed-color-215dff: #215DFF;
 --unnamed-color-9b9b9b: #9B9B9B;
+--unnamed-color-ebebeb: #EBEBEB;
 
 /* Font/text values */
 --unnamed-font-family-open-sans: Open Sans;
@@ -51,6 +52,13 @@ html {
 }
 
 @media only screen and (max-width: 750px) {
+
+	main {
+		display: flex;
+		flex-direction: column;
+		gap: 8rem;
+	}
+
 	.padded-container {
 		padding: 0 2rem;
 	}
