--- a/css/footer.css
+++ b/css/footer.css
@@ -5,7 +5,8 @@
 	align-items: center;
 	justify-content: center;
 	gap: 3.2rem;
-	padding: 4rem 0;
+	padding-top: 4rem;
+	padding-bottom: 4rem;
 }
 
 .footer-container * {
@@ -57,9 +58,72 @@
 }
 
 .footer-internal {
+	display: none;
+}
+
+.footer-internal-mobile ul {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 2.4rem;
 	text-align: center;
+	font: 
+		var(--unnamed-font-style-normal) normal 
+		var(--unnamed-font-weight-normal) 
+		var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
+		var(--unnamed-font-family-open-sans);
+}
+
+@media only screen and (min-width: 750px) {
+
+	.footer-container {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		background-color: var(--unnamed-color-111111);
+	}
+
+	.footer-internal-mobile {
+		visibility: hidden;
+	}
+
+	.footer-follow-info {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 1.6rem;
+		text-align: center;
+	}
+
+	.footer-contact,
+	.footer-follow {
+		align-items: flex-start;
+	}
+
+	.footer-contact-info {
+		align-items: flex-start;
+		text-align: left;
+	}
+
+	.footer-internal {
+		display: flex;
+		background-color: var(--unnamed-color-111111);
+	}
+
+	.footer-internal ul{
+		display: flex;
+		gap: 2.4rem;
+		width: 100%;
+		padding-top: 2rem;
+		padding-bottom: 2rem;
+		border-top: solid thin rgba(255, 255, 255, 0.2);
+	}
+
+	.footer-internal a {
+		color: var(--unnamed-color-ffffff);
+		font: 
+			var(--unnamed-font-style-normal) normal 
+			var(--unnamed-font-weight-normal) 
+			var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
+			var(--unnamed-font-family-open-sans);
+	}
 }
