--- a/css/sectionFive.css
+++ b/css/sectionFive.css
@@ -1,7 +1,3 @@
-.section-five {
-	margin-top: calc(25.5rem * 0.85);
-}
-
 .final-showcase {
 	display: flex;
 	flex-direction: column;
@@ -34,4 +30,16 @@
 		var(--unnamed-font-weight-normal) 
 		var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
 		var(--unnamed-font-family-open-sans);
+}
+
+.section-five-contact {
+	display: none;
+}
+
+@media only screen and (min-width: 750px) {
+	.section-five-contact {
+		display: block;
+		background-color: var(--unnamed-color-111111);
+		color: var(--unnamed-color-ffffff);
+	}
 }
