--- a/css/sectionThree.css
+++ b/css/sectionThree.css
@@ -35,10 +35,34 @@
 	gap: 0.8rem;
 }
 
+.profile-headings h1 {
+	font: 
+		var(--unnamed-font-style-normal) normal 
+		var(--unnamed-font-weight-bold) 
+		var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
+		var(--unnamed-font-family-open-sans);
+}
+
+.profile-headings h2 {
+	font: 
+		var(--unnamed-font-style-normal) normal 
+		var(--unnamed-font-weight-normal) 
+		var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
+		var(--unnamed-font-family-open-sans);
+}
+
 .profile-contacts p {
 	font: 
 		var(--unnamed-font-style-normal) normal 600 
 		var(--unnamed-font-size-14)/28px 
 		var(--unnamed-font-family-open-sans);
 	color: var(--unnamed-color-215dff);
+}
+
+@media only screen and (min-width: 750px) {
+
+	.profile-cards {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
