--- a/css/footer.css
+++ b/css/footer.css
@@ -21,14 +21,6 @@
 		var(--unnamed-font-family-open-sans);
 }
 
-.footer-container p {
-	font: 
-		var(--unnamed-font-style-normal) normal 
-		var(--unnamed-font-weight-normal) 
-		var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
-		var(--unnamed-font-family-open-sans);
-}
-
 .footer-contact,
 .footer-follow {
 	display: flex;
@@ -97,6 +89,11 @@
 	.footer-contact,
 	.footer-follow {
 		align-items: flex-start;
+		height: 100%;
+	}
+
+	.footer-follow {
+		padding-left: 50%;
 	}
 
 	.footer-contact-info {
@@ -125,5 +122,21 @@
 			var(--unnamed-font-weight-normal) 
 			var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
 			var(--unnamed-font-family-open-sans);
+	}
+}
+
+@media only screen and (min-width: 1650px) {
+
+.footer-container {
+	padding-top: 7.5rem;
+	padding-bottom: 7.5rem;
+}
+
+.footer-container h1 {
+	font: 
+		var(--unnamed-font-style-normal) normal 
+		var(--unnamed-font-weight-bold) 
+		var(--unnamed-font-size-24)/var(--unnamed-line-spacing-32) 
+		var(--unnamed-font-family-open-sans);
 	}
 }
