--- a/css/sectionFour.css
+++ b/css/sectionFour.css
@@ -1,13 +1,9 @@
-.section-four {
-	padding-bottom: 22.3rem;
-}
-
 .contact-big {
 	position: relative;
 	display: flex;
 	justify-content: center;
 	padding: 11rem 0;
-	background: url(../assets/img/image23.png);
+	background: url(../assets/img/image14.png);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
@@ -22,7 +18,7 @@
 	justify-content: center;
 	gap: 2.4rem;
 	background-color: var(--unnamed-color-ffffff);
-	width: calc(100vw - 4rem);
+	width: calc(100% - 4rem);
 	padding: 4rem 2rem;
 	box-shadow: 0 0 4rem rgba(0, 0, 0, 0.2);
 }
@@ -56,21 +52,52 @@
 		var(--unnamed-font-family-open-sans);
 }
 
-@media only screen and (min-width:  750px) {
+@media only screen and (min-width: 1150px) {
 
 	.section-four {
-		padding: 0 4rem;
+		padding-left: 14%;
 	}
 
 	.contact-big {
-		width: 60vw;
-		padding: 25rem 0;
+		width: 50%;
+		padding: 27rem 0;
 	}
 
 	.contact-big-info {
-		top: calc((100% - (100% - 16rem)) / 2 );
-		left: 60%;
-		height: calc(100% - 16rem);
-		width: calc(60vw * 0.85);
+	    position: absolute;
+	    top: 50%;
+	    left: 50%;
+	    transform: translate(30%, -50%);
+	    height: 75%;
+	    width: 78%;
+	    align-items: flex-start;
+	    text-align: left;
+	}
+
+	.contact-big-txt {
+		align-items: flex-start;
+	}
+}
+
+@media only screen and (min-width:  1650px) {
+
+	.contact-big-info {
+	    padding: 4rem;
+	    width: 82%;
+	}
+
+	.contact-big-txt h1 {
+		font: 
+			var(--unnamed-font-style-normal) normal 
+			var(--unnamed-font-weight-bold) 36px/var(--unnamed-line-spacing-48) 
+			var(--unnamed-font-family-open-sans);
+	}
+
+	.contact-big-txt h2 {
+		font: 
+			var(--unnamed-font-style-normal) normal 
+			var(--unnamed-font-weight-normal) 
+			var(--unnamed-font-size-18)/40px 
+			var(--unnamed-font-family-open-sans);
 	}
 }
