--- a/css/sectionThree.css
+++ b/css/sectionThree.css
@@ -1,12 +1,12 @@
 .section-three {
 	display: flex;
 	flex-direction: column;
+	padding-bottom: 4rem;
 }
 
 .profile-cards {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	gap: 4rem;
 }
 
@@ -15,6 +15,7 @@
 	flex-direction: column;
 	align-items: center;
 	gap: 1.6rem;
+
 }
 
 .profile-img img {
@@ -27,6 +28,13 @@
 	flex-direction: column;
 	gap: 1.6rem;
 	text-align: center;
+}
+
+.profile-text p {
+	font: 
+	var(--unnamed-font-style-normal) normal 600 
+	var(--unnamed-font-size-14)/28px 
+	var(--unnamed-font-family-open-sans) !important;
 }
 
 .profile-headings {
@@ -51,18 +59,33 @@
 		var(--unnamed-font-family-open-sans);
 }
 
-.profile-contacts p {
-	font: 
-		var(--unnamed-font-style-normal) normal 600 
-		var(--unnamed-font-size-14)/28px 
-		var(--unnamed-font-family-open-sans);
+.profile-text p {
 	color: var(--unnamed-color-215dff);
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (min-width: 360px) {
 
 	.profile-cards {
 		display: grid;
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+	}
+
+	.profile-card {
+		padding: 0 5rem;
+	}
+}
+
+@media only screen and (min-width: 520px) {
+
+	.profile-card {
+		padding: 0;
+	}
+}
+
+@media only screen and (min-width: 1920px) {
+
+	.profile-cards {
+		grid-template-columns: repeat(auto-fit, minmax(27.6rem, 1fr));
+		gap: 4.8rem;
 	}
 }
