--- a/css/sectionTwo.css
+++ b/css/sectionTwo.css
@@ -6,10 +6,9 @@
 }
 
 .read-more-card {
+	position: relative;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;
-	gap: 4rem;
 	align-items: center;
 	width: 100%;
 	min-height: 30.2rem;
@@ -22,7 +21,7 @@
 	align-items: center;
 	gap: 2.4rem;
 	text-align: center;
-	padding: 0 2rem;
+	padding: 4rem 2rem;
 }
 
 .read-more-txt h1 {
@@ -33,16 +32,9 @@
 		var(--unnamed-font-family-open-sans);
 }
 
-.read-more-txt p {
-	font: 
-		var(--unnamed-font-style-normal) normal 
-		var(--unnamed-font-weight-normal) 
-		var(--unnamed-font-size-16)/var(--unnamed-line-spacing-24) 
-		var(--unnamed-font-family-open-sans);
-}
-
-
 .read-more-btn {
+	position: absolute;
+	bottom: 0;
 	width: 100%;
 	background-color: var(--unnamed-color-d2d2d2);
 	padding: 1.1rem 0;
@@ -53,10 +45,86 @@
 		var(--unnamed-font-family-open-sans);
 }
 
-@media only screen and (min-width: 750px) {
+@media only screen and (max-width: 300px) {
+
+	.read-more-txt {
+		padding: 2rem 1rem;
+	}
+}
+
+@media only screen and (min-width: 450px) {
+
+	.read-more-txt {
+		padding: 6rem 4rem;
+	}
+}
+
+@media only screen and (min-width: 1367px) {
 
 	.read-more-cards {
-		grid-template-columns: repeat(2, 1fr);
-		gap: 2.4rem;
+		grid-template-columns: repeat(auto-fit, minmax(28rem, 1fr));
+	}
+
+	.read-more-card {
+		min-height: 39.2rem;
+	}
+}
+
+@media only screen and (min-width: 1650px) {
+
+	.read-more-txt h1 {
+		font: 
+			var(--unnamed-font-style-normal) normal 
+			var(--unnamed-font-weight-bold) 
+			var(--unnamed-font-size-24)/var(--unnamed-line-spacing-36) 
+			var(--unnamed-font-family-open-sans);
+	}
+
+	.read-more-btn {
+		font: 
+			var(--unnamed-font-style-normal) normal 
+			var(--unnamed-font-weight-normal) 
+			var(--unnamed-font-size-18)/var(--unnamed-line-spacing-32) 
+			var(--unnamed-font-family-open-sans);
+	}
+}
+
+@media only screen and (min-width: 1920px) {
+
+	.section-two {
+		padding-top: 8rem;
+	}
+
+	.read-more-cards {
+		display: flex;
+		justify-content: space-evenly;
+		gap: 4.8rem;
+	}
+
+	.read-more-card {
+		max-width: 38.4rem;
+		max-height: 39.2rem;
+	}
+
+	.read-more-txt {
+		padding: 0 4rem;
+		padding-top: 6rem;
+	}
+
+	.read-more-txt h1 {
+		font: 
+		var(--unnamed-font-style-normal) normal 
+		var(--unnamed-font-weight-bold) 
+		var(--unnamed-font-size-24)/var(--unnamed-line-spacing-36) 
+		var(--unnamed-font-family-open-sans);
+	}
+
+	.read-more-btn {
+		padding: 1.2rem 0;
+		font: 
+			var(--unnamed-font-style-normal) normal 
+			var(--unnamed-font-weight-normal) 
+			var(--unnamed-font-size-18)/var(--unnamed-line-spacing-32) 
+			var(--unnamed-font-family-open-sans);
 	}
 }
